added batch processsing
